force-app/main/default/objects/Treatment_Course_Template__c/Treatment_Course_Template__c.object-meta.xml
<CustomObject>
    <label>Treatment Course Template</label>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Treatment Course Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatment Course Templates</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>