force-app/main/default/objects/Treatment_Course_Template__c/fields/Contraindication__c.field-meta.xml
<CustomField>
    <fullName>Contraindication__c</fullName>
    <label>Contraindication</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>