force-app/main/default/objects/Treatment_Course_Template__c/fields/Course_Cost__c.field-meta.xml
<CustomField>
    <fullName>Course_Cost__c</fullName>
    <label>Course Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>