force-app/main/default/objects/Treatment_Course_Template__c/fields/Course_Length__c.field-meta.xml
<CustomField>
    <fullName>Course_Length__c</fullName>
    <label>Course Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>