force-app/main/default/objects/Treatment_Course_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Cost__c</columns>
    <columns>Contraindication__c</columns>
    <columns>Course_Length__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>